# geo-reader

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
data/: Paradas Transporte Colectivo AMSS.geojson
doc/: 1-migrate-osm.md  db.md
doc/api/: endpoints.rest  neary_routes.rest
doc/deploy/: geo-reader.service.md  ngix.md
doc/functions/: find_route.md
doc/osm/: 1-migrate-osm.md  3-osmdb-tables.md
doc/psql/: Tables.md  index.sql  nearby.sql  nodes.sql
src/: db.rs  lib.rs  main.rs
src/algorithms/: astar.rs  mod.rs
src/api/: handlers.rs  mod.rs
src/functions/: find_nearby.rs  find_places.rs  mod.rs
src/middlewares/: logger.rs
src/queries/: _structs.rs  find_bus_route.rs  find_by_coordinates.rs  find_by_number.rs  find_nearby.rs  find_places.rs  find_route.rs  mod.rs  nearby_route.rs  plan.rs  plan_route.rs
src/queries/plan_routes/: _structs.rs  data_loader.rs  geo_validation.rs  index.rs  mod.rs  spatial_search.rs
src/scripts/: bintest.rs  config.toml  convert_to_messagepack.rs  create_tantivy_index.rs
src/utils/: load_graph.rs  mod.rs
