[package]
name = "geo-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
num-traits = "0.2"
ordered-float = "4.4.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
postgres-types = "0.2"


# [lib]
# name = "geo_reader"
# path = "src/lib.rs"
