[package]
name = "geo-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
num-traits = "0.2"
ordered-float = "4.4.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = "0.2"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
geo = "0.26"



# [lib]
# name = "geo_reader"
# path = "src/lib.rs"
