[package]
name = "geo-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
num-traits = "0.2"
ordered-float = "4.4.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = "0.2"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
# geo = "0.26"
geo = { version = "0.27", features = ["use-serde"] }
rmp-serde = "1.1" # Librería para trabajar con MessagePack
tantivy = "0.19"
thiserror = "1.0"
rayon = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.7"
geojson = "0.24"
geo-types = "0.7"
lazy_static = "1.4"
bincode = "1.3"
num_cpus = "1.13"

[dev-dependencies]
tempfile = "3.7"
tokio-test = "0.4"

[[bin]]
name = "convert_to_messagepack"
path = "src/scripts/convert_to_messagepack.rs"

[[bin]]
name = "create_tantivy_index"
path = "src/scripts/create_tantivy_index.rs"

[[bin]]
name = "bintest"
path = "src/scripts/bintest.rs"



# [lib]
# name = "geo_reader"
# path = "src/lib.rs"
